[tool.poetry]
name = "repl_python3_PyTweet-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
quart = "^0.16.2"
motor = "^2.5.1"
dnspython = "^2.1.0"
humanize = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
